objects/OAH_Expenses__c.object
<CustomObject>
    <label>OAH Expense</label>
    <nameField>
        <displayFormat>Expense-{YYYY}-{0000}</displayFormat>
        <label>OAH Expenses ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OAH Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Hotel__c</fullName>
        <label>Hotel</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Airfare__c</fullName>
        <label>Airfare</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parking__c</fullName>
        <label>Parking</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Per_Diem__c</fullName>
        <label>Per Diem</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Car__c</fullName>
        <label>Rental Car</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incidentals__c</fullName>
        <label>Incidentals</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name_of_Hotel__c</fullName>
        <label>Name of Hotel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Expenses__c</fullName>
        <formula>Incidentals__c  +  Rental_Car__c  +  Airfare__c  +  Per_Diem__c  +  Hotel__c  +  Parking__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name_of_Airline__c</fullName>
        <label>Name of Airline</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAH_Case_Number__c</fullName>
        <label>OAH Case ID</label>
        <referenceTo>OAH_Case_List__c</referenceTo>
        <relationshipLabel>OAH Expenses</relationshipLabel>
        <relationshipName>OAH_Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Parking_Company__c</fullName>
        <label>Parking Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Rental_Company__c</fullName>
        <label>Car Rental Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Description__c</fullName>
        <label>Expense Description</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Per_Diem_Description__c</fullName>
        <label>Per Diem Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incidentals_Description__c</fullName>
        <label>Incidentals Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>OAH_Case_Number__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>